# edm-haskell

./: .gitignore  ChangeLog.md  LICENSE  README.md  applied_tests.txt  cabal.project.local  default.nix  depends.nix  edm-haskell.cabal  emacs-dyn-cabal.cabal  foreign-library-cabal.txt  release.nix  sample_cabal.txt  sample_multiple_library.txt  shell.nix
app/: .dir-locals.el  Main.hs
cabaltarget/: CabalTargetApp.hs
cbits/: emacs_wrapper.c
flib/Data/: FuzzyMatch.hs
flib/Emacs/: CabalTarget.hs  FuzzyMatch.hs  Init.hs
lib/: CabalTarget.hs  Init.hs  Lib.hs
src/: .dir-locals.el  Lib.hs
tests/: test.el  test.sh
tests/samples/: applied-fp-course.txt  cardano-sl-explorer.txt
