name:                edm-haskell
version:             0.1.0.0
synopsis:            A emacs dynamic module
description:         It provides various emacs symbols and functions via
                     emacs-dynamic module architecture with leveraging
                     navtive haskell benefits.
license:             BSD3
license-file:        LICENSE
author:              templateK
maintainer:          templateK@github.com
copyright:           templatek 2018-2019 all rights reserved.
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
tested-with:         GHC == 8.4.3
cabal-version:       >=2


library
  -- exposed-modules:
  build-depends:       base >= 4.11
  hs-source-dirs:      lib 
  default-language:    Haskell2010


foreign-library edm-haskell
  type:                native-shared
  build-tools:         hsc2hs
  c-sources:           cbits/emacs_wrapper.c
  includes:            emacs-module.h
  install-includes:    emacs-module.h
  include-dirs:        cbits

  -- lib-version-info:  0:0:0

  if os(Windows)
    options: standalone

  other-modules:       Emacs.Init
                     , Emacs.FuzzyMatch
                     , Emacs.CabalTarget
                     , Data.FuzzyMatch
  build-depends:       async
                     , base >= 4.11
                     , bytestring
                     , Cabal
                     , containers
                     , directory
                     , edm-haskell
                     , emacs-module
                     , exceptions
                     , filepath
                     , formatting
                     , lens
                     , lifted-async
                     , megaparsec
                     , monad-control
                     , monad-par
                     , mtl
                     , prettyprinter
                     , random
                     , safe-exceptions-checked
                     , text
                     , time
                     , vector
  hs-source-dirs:      flib
  default-language:    Haskell2010
  ghc-options:
    -no-hs-main
    -O2
    -threaded
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
      -Whi-shadowing
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto

executable edm-haskell-exe
  main-is:             Main.hs
  build-depends:       base >=4.11
                     , bytestring
                     , Cabal
                     , containers
                     , emacs-module
                     , exceptions
                     , directory
                     , filepath
                     , formatting
                     , lens
                     , megaparsec
                     , mtl
                     , random
                     , text
                     , time
                     , vector
                     , edm-haskell
  hs-source-dirs:      app
  default-language:    Haskell2010