name:                emacs-dyn-cabal
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              templateK
maintainer:          templateK@github.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.20

library
    -- other-modules:
  exposed-modules:     Lib
  build-depends:       base >= 4.11
                     , bytestring
                     , containers
                     , emacs-module
                     , formatting
                     , lens
                     , megaparsec
                     , mtl
                     , random
                     , text
                     , time
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable emacs-dyn-cabal
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11
                     , bytestring
                     , containers
                     , emacs-module
                     , formatting
                     , lens
                     , megaparsec
                     , mtl
                     , random
                     , text
                     , time
                     , vector
  hs-source-dirs:      app
  default-language:    Haskell2010