name:                emacs-dyn-cabal
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              templateK
maintainer:          templateK@github.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

library
  ghc-options:
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
      -Whi-shadowing
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns

  exposed-modules:     Lib
  build-depends:       base >= 4.11
                     , bytestring
                     , containers
                     , emacs-module
                     , formatting
                     , lens
                     , megaparsec
                     , mtl
                     , random
                     , text
                     , time
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

foreign-library emacs-native
  type:                native-shared
  -- lib-version-info:    0:0:0
  default-language:    Haskell2010
  build-tools:
    hsc2hs
  c-sources:
    cbits/emacs_wrapper.c
  includes:
    emacs-module.h
  install-includes:
    emacs-module.h
  include-dirs:
    cbits
  other-modules:
    -- Emacs.EprojTagIndex
    -- Emacs.FastFileSearch
    -- Emacs.FuzzyMatch
    -- Emacs.Grep
    -- Emacs.Init
  -- build-depends:       base >=4.7
  --                    , bytestring
  --                    , bytestring-lexing
  --                    , containers
  --                    , emacs-module
  --                    , emacs-native
  --                    , exceptions
  --                    , lifted-async
  --                    , monad-control
  --                    , monad-par
  --                    , monad-par-extras
  --                    , path
  --                    , path-io
  --                    , prettyprinter
  --                    , safe-exceptions-checked
  --                    , stm
  --                    , stm-chans
  --                    , text
  --                    , transformers-base


executable emacs-dyn-cabal
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11
                     , bytestring
                     , containers
                     , emacs-module
                     , formatting
                     , lens
                     , megaparsec
                     , mtl
                     , random
                     , text
                     , time
                     , vector
  hs-source-dirs:      app
  default-language:    Haskell2010